--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
         }
         let age = prompt("How old are you?");
         age = Number.parseInt(age)
-        var x = ("You are ");
+        var x = ("Good you are ");
         var y = (" years old!")
         alert(x+ age + y)
     </script>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
